# crypt-tool

./: .gitignore  Cargo.toml  README.md
src/: compression.rs  crypto.rs  integrity.rs  lib.rs  main.rs  shred.rs
