[package]
name = "encrypt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "encrypt"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
rand = "0.8"
anyhow = "1.0"
tempfile = "3.10"
# Security enhancements
argon2 = "0.5"
password-hash = "0.5"
zeroize = "1.7"
secrecy = "0.8"
# Performance and UX
indicatif = "0.17"
rayon = "1.8"
# Better error handling
thiserror = "1.0"
# Configuration support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Additional encryption algorithms
chacha20poly1305 = "0.10"
# File operations and integrity
sha2 = "0.10"
hmac = "0.12"
glob = "0.3"
walkdir = "2.4"
